<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AfterStart"
    android:background="@color/white">

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="210dp"
        android:layout_height="59dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:fontFamily="@font/new1"
        android:text="@string/mode"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="148dp"
        android:layout_height="37dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:fontFamily="@font/new1"
        android:text="@string/Timer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="115dp"
        android:layout_height="116dp"
        android:layout_marginTop="240dp"
        android:background="@color/white"
        android:onClick="TimerMode"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stopwatch"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="147dp"
        android:layout_height="41dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:fontFamily="@font/new1"
        android:text="@string/Free"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginTop="240dp"
        android:background="@color/white"
        android:onClick="freeMode"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tasks"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="357dp"
        android:layout_height="83dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="@font/new1"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/button6"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginBottom="275dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/new1"
        android:text="@string/About"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/new1"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/pur"
        android:fontFamily="@font/new1"
        android:text="@string/rate"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/new1"
        android:text="@string/Help"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>