<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".freemode"
    android:background="@color/temp">

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="372dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:fontFamily="@font/new1"
        android:text="@string/ques"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="146dp"

        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765"
        app:srcCompat="@drawable/answer" />

    <Button
        android:id="@+id/button1"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/new1"
        android:onClick="Start15Que"
        android:text="@string/q15"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/button2"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/new1"
        android:text="@string/q45"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <Button
        android:id="@+id/button6"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/new1"
        android:text="@string/q30"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/button8"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/new1"
        android:onClick="BackHome"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:iconTint="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />
</androidx.constraintlayout.widget.ConstraintLayout>